퀴즈 카드 및 검색 정렬 컴포넌트를 새 디렉토리로 이동하고, 불필요한 코드 제거 및 Supabase 타입 생성 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "supabase gen types typescript --project-id ojttkweczzpdvnpaesyn --schema public > src/utils/supabase/types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
