--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.6.3",
     "input-otp": "^1.4.2",
     "langchain": "^0.3.19",
     "lucide-react": "^0.479.0",
+    "motion": "^12.6.3",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
