--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gen": "supabase gen types typescript --project-id ojttkweczzpdvnpaesyn --schema public > src/utils/supabase/types.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@langchain/core": "^0.3.43",
     "@langchain/langgraph": "^0.2.59",
