- [x] 퀴즈 해설 타입 추가   - [x] 문제 생성시 퀴즈 해설 추가, 수정, 삭제 기능

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen": "supabase gen types typescript --project-id ojttkweczzpdvnpaesyn --schema public > src/utils/supabase/types.ts"
+    "gen": "supabase gen types typescript --project-id ojttkweczzpdvnpaesyn --schema public > src/database.types.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
