--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@langchain/core": "^0.3.43",
+    "@langchain/google-genai": "^0.2.3",
     "@langchain/langgraph": "^0.2.59",
+    "@langchain/openai": "^0.5.5",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
