--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@langchain/community": "^0.3.41",
     "@langchain/core": "^0.3.43",
     "@langchain/google-genai": "^0.2.3",
     "@langchain/langgraph": "^0.2.59",
@@ -61,6 +62,7 @@
     "motion": "^12.6.3",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
