--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tanstack/react-query-devtools": "^5.69.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
