--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "langchain": "^0.3.19",
     "lucide-react": "^0.479.0",
     "motion": "^12.6.3",
-    "next": "^15.2.4",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
@@ -92,5 +92,17 @@
     "eslint-config-next": "^15.2.4",
     "tailwindcss": "^4.0.17",
     "typescript": "^5.8.2"
+  },
+  "overrides": {
+    "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+    "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
+    "prismjs@<1.30.0": ">=1.30.0",
+    "@eslint/plugin-kit@<0.3.4": ">=0.3.4",
+    "playwright@<1.55.1": ">=1.55.1",
+    "form-data@>=4.0.0 <4.0.4": ">=4.0.4",
+    "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+    "glob@>=10.2.0 <10.5.0": ">=10.5.0",
+    "mdast-util-to-hast@>=13.0.0 <13.2.1": ">=13.2.1",
+    "expr-eval@<=2.0.2": ">=3.0.0"
   }
 }
